tests/e2e/not_allowed/import.error
Error: syntax error in story at line 1, column 1

1|    import = 1
      ^^^^^^

E0030: `import` is reserved for future use
